modifique en la copia del sitio web

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    hola mundo
-
-    otro texto
-
-    modificando el archivo
+    esto es una copia
 </body>
 </html>
